--- a/src/app/pages/portal/portal.component.html
+++ b/src/app/pages/portal/portal.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<!-- <div class="wrapper">
   <app-portal-header (toggleMenuSidebar)="toggleMenuSidebar()"></app-portal-header>
 
   <app-portal-menu-sidebar
@@ -13,4 +13,6 @@
   <aside class="control-sidebar control-sidebar-dark"></aside>
   <div id="sidebar-overlay" (click)="toggleMenuSidebar()"></div>
   <app-chat-bot></app-chat-bot>
-</div>
+</div> -->
+
+<div>portal</div>
